# cto-test

./: .gitignore  Agents.md  CMakeLists.txt  DEVELOPMENT_PLAN.md  STAGE_4_1_SUMMARY.md  platformio.ini
lib/: Logger.cpp  Logger.h  MockAPIRequestQueue.cpp  MockAPIRequestQueue.h  MockEmailManager.cpp  MockEmailManager.h  MockLightController.cpp  MockLightController.h  MockPumpController.cpp  MockPumpController.h  MockPushbuttonController.cpp  MockPushbuttonController.h  MockSensorManager.cpp  MockSensorManager.h  MockSettingsManager.cpp  MockSettingsManager.h  MockSystemMetrics.cpp  MockSystemMetrics.h  MockTelegramManager.cpp  MockTelegramManager.h  MockWebServer.cpp  MockWebServer.h  MockWiFi.cpp  MockWiFi.h  SunriseSunset.cpp  SunriseSunset.h  WifiController.cpp  WifiController.h
test/test_common/: CommonTestFixture.cpp  CommonTestFixture.h  TestConstants.h
test/test_desktop/: test_api_request_queue.cpp  test_email_manager.cpp  test_light_controller.cpp  test_logger.cpp  test_monitoring_integration.cpp  test_pump_controller.cpp  test_pushbutton_controller.cpp  test_sensor_manager.cpp  test_settings_manager.cpp  test_sunrise_sunset.cpp  test_system_metrics.cpp  test_telegram_manager.cpp  test_wifi_controller.cpp
test_utils/: TestUtils.cpp  TestUtils.h
